@@ -1,19 +1,4 @@
-.deps
-Makefile
-Makefile.in
-aclocal.m4
-*.cache
-*.log
-*.status
-configure
-build
+/output/
 .stgitmsg.txt*
-*.tar.*
 *~
-*.o
-stamp-*
 .stgit-edit.txt
-config.h
-config.h.in
-mpdscribble
-.dirstamp
