@@ -1,0 +1,7 @@
+install_man('mpdscribble.1')
+
+install_data(
+  'mpdscribble.conf',
+  install_dir: get_option('sysconfdir'),
+  install_mode: 'rw-------',
+)
