@@ -2,6 +2,7 @@ mpdscribble 0.23 - not yet released
   * fix build failure with GLib < 2.16
   * remove libsoup support
   * require MPD 0.16
+  * build with Meson/ninja instead of autotools
 
 
 mpdscribble 0.22 - 2011-07-09
